wait this is actually ubuntu

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ services:
 
 before_install:
     - sudo apt-get -qq update
-    - sudo apt-get install -y libxml2-dev
-    - sudo apt-get install docker=1.8.3~ds1-2
+    - sudo apt-get install docker-engine=1.8.3-0~trusty
     - docker pull redis
 
 env:
