--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,10 @@ sudo: required
 language: python
 python: 3.4
 
-services:
-    - docker
-
 before_install:
     - sudo apt-get -qq update
     - sudo apt-get install docker-engine=1.8.3-0~trusty
+    - sudo service docker start
     - docker pull redis
 
 env:
