--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,14 @@ language: python
 python: 3.4
 
 before_install:
-    - sudo apt-get -qq update
-    - sudo apt-get install apt-transport-https ca-certificates
+    - sudo apt-get -qq update -y
+    - sudo apt-get install apt-transport-https ca-certificates -y
     - sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
-    - sudo sh -c "echo 'deb https://apt.dockerproject.org/repo ubuntu-trusty main' >> /etc/apt/sources.list.d/docker.list"
-    - sudo apt-get -qq update
-    - sudo apt-get install docker-engine=1.8.3-0~trusty
-    - sudo service docker start
+    - sudo apt-get install -y linux-image-extra-virtual
+    - sudo sh -c "echo deb https://apt.dockerproject.org/repo ubuntu-precise main > /etc/apt/sources.list.d/docker.list"
+    - sudo apt-get -qq update -y
+    - sudo apt-get install docker-engine=1.9.1-0~precise -y
+    - sudo service docker restart
     - docker pull redis
 
 env:
