--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
     - sudo sh -c "echo deb https://apt.dockerproject.org/repo ubuntu-precise main > /etc/apt/sources.list.d/docker.list"
     - sudo apt-get -qq update -y
     - sudo apt-get install docker-engine=1.9.1-0~precise -y
+    - sudo gpasswd -a ${USER} docker
     - newgrp docker
     - sudo service docker restart
     - docker pull redis
