--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,7 @@ install:
   - pip install tox
 script:
     - env
+    - which tox
     - sudo -E env
+    - sudo -E which tox
     #- sudo -E ./the_build.sh
