explicitly setting path

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ install:
 script:
     - env
     - which tox
-    - sudo -E env
-    - sudo -E which tox
+    - sudo -E "PATH=$PATH" env
+    - sudo -E "PATH=$PATH" which tox
     #- sudo -E ./the_build.sh
